Fix modal/alert z-index issue

--- a/injected/src/sass/_alert.scss
+++ b/injected/src/sass/_alert.scss
@@ -22,6 +22,8 @@
   box-shadow: 0 0 5px $light-deep;
   margin: auto;
   margin-top: 50px;
+  z-index: 100;
+  position: relative;
 }
 
 .alert__content {
