--- a/injected/src/sass/_select.scss
+++ b/injected/src/sass/_select.scss
@@ -109,7 +109,7 @@
     margin-top: 0;
     position: fixed;
     width: 242px;
-    z-index: 20;
+    z-index: 2;
     margin-top: -35px;
     &:after {
       content: "\f002";
